syntax = "proto3";

import "common.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Ligric.Protobuf";

package ligric.protobuf;

service Futures {
    rpc OrdersSubscribe(FuturesSubscribeRequest) returns (stream OrdersChanged);
    rpc ValuesSubscribe(FuturesSubscribeRequest) returns (stream ValuesChanged);
    rpc PositionsSubscribe(FuturesSubscribeRequest) returns (stream PositionsChanged);
	rpc LeverageSubscribe(FuturesSubscribeRequest) returns (stream LeverageChanged);
}

message FuturesSubscribeRequest
{
	int64 userId = 1;
	int64 UserApiId = 2;
}

message OrdersChanged {
	string ExchangeId = 1;
	FuturesOrder Order = 2;
	Action action = 3;
}

message ValuesChanged {
	FuturesValue Value = 1;
	Action action = 2;
}

message PositionsChanged {
	string ExchangeId = 1;
	FuturesPosition Position = 2;
	Action action = 3;
}

message LeverageChanged {
	string ExchangeId = 1;
	FuturesLeverage Leverage = 2;
	Action action = 3;
}

message FuturesOrder {
	int64 id = 1;
	string symbol = 2;
	Side side = 3;
	PositionSide PositionSide = 4;
	string quantity = 5;
	string price = 6;
	string stopPrice = 7;
	string currentPrice = 8;
	string type = 9;
}

message FuturesValue
{
	string Symbol = 1;
	string Value = 2;
}

message FuturesPosition {
	int64 id = 1;
	string Symbol = 2;
	string EntryPrice = 3;
	Side Side = 4;
	string Quantity = 5;
	string Leverage = 6;
}

message FuturesLeverage {
	string Symbol = 1;
	string Value = 3;
}

enum Side
{
	Sell = 0;
	Buy = 1;
}

enum PositionSide
{
	Short = 0;
	Long = 1;
	Both = 2;
}
